# jsonschema-to-marshmallow

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
jsonschema_marshmallow/: __init__.py  base.py
